pushed to save changes without using stashes, ERRORS WITH INFORMATION DISPLAY TO BE FIXED

--- a/Swimclub.Mobile/Swimclub.Mobile/Views/AdminPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/AdminPage.xaml
@@ -4,9 +4,20 @@
              x:Class="Swimclub.Mobile.Views.AdminPage">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Grid ColumnSpacing="0" RowSpacing="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+
+                </Grid.ColumnDefinitions>
+                
+                <Button x:Name="Modify_Student_bt" Text="Modify Student Data" Grid.Row="0" Grid.ColumnSpan="2" Pressed="Modify_Student"/>
+
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
