--- a/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
@@ -99,6 +99,10 @@
         <ShellContent Route="StudentsPage" ContentTemplate="{DataTemplate local:StudentsPage}" />
     </FlyoutItem>
 
+    <FlyoutItem Title="Admin Page" Icon="icon_feed.png" IsVisible="{Binding isAdmin}" x:Name="adminFlyout">
+        <ShellContent Route="AdminPage" ContentTemplate="{DataTemplate local:AdminPage}" />
+    </FlyoutItem>
+
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <!--<MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
     </MenuItem>-->
