--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentDetailPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentDetailPage.xaml
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Swimclub.Mobile.Views.StudentDetailPage">
+             x:Class="Swimclub.Mobile.Views.StudentDetailPage"
+             xmlns:local="clr-namespace:Swimclub.Mobile.ViewModels"
+             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:StringArrayToString x:Key="ConvertArray"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
             <ScrollView>
@@ -47,13 +54,19 @@
             
                     <Label Text=" --- Medical Details --- " FontAttributes="Bold" Grid.Row="6" Grid.ColumnSpan="2" HorizontalOptions="Center"/>
                     <Label Text="Allergies : " FontAttributes="Bold" Grid.Row="7" Grid.Column="0"/>
+                    <Label Text="{Binding Student.MedicalDetails.Allergies,Converter={StaticResource ConvertArray}}" Grid.Row="7" Grid.Column="1" />
                     <Label Text="Immunizations : " FontAttributes="Bold" Grid.Row="8" Grid.Column="0"/>
+                    <Label Text="{Binding Student.MedicalDetails.Immunizations,Converter={StaticResource ConvertArray}}" Grid.Row="8" Grid.Column="1" />
                     <Label Text="Illnesses : " FontAttributes="Bold" Grid.Row="9" Grid.Column="0"/>
+                    <Label Text="{Binding Student.MedicalDetails.Illnesses,Converter={StaticResource ConvertArray}}" Grid.Row="9" Grid.Column="1" />
                     <Label Text="Disabilities : " FontAttributes="Bold" Grid.Row="10" Grid.Column="0"/>
+                    <Label Text="{Binding Student.MedicalDetails.Disabilities,Converter={StaticResource ConvertArray}}" Grid.Row="10" Grid.Column="1" />
                     <Label Text="Notes : " FontAttributes="Bold" Grid.Row="11" Grid.Column="0"/>
+                    <Label Text="{Binding Student.MedicalDetails.Notes}" Grid.Row="11" Grid.Column="1" />
             
                     <Label Text=" --- Parent / Guardian Details --- " FontAttributes="Bold" Grid.Row="12" Grid.ColumnSpan="2" HorizontalOptions="Center"/>
                     <Label Text="Full Name : " FontAttributes="Bold" Grid.Row="13" Grid.Column="0"/>
+                    <Label Text="{Binding Student.MedicalDetails.Contact.FullName,Converter={StaticResource ConvertArray}}" Grid.Row="13" Grid.Column="1" />
                     <Label Text="Phone Number : " FontAttributes="Bold" Grid.Row="14" Grid.Column="0"/>
                     <Label Text="Mobile Number : " FontAttributes="Bold" Grid.Row="15" Grid.Column="0"/>
                     <Label Text="Address Line1 : " FontAttributes="Bold" Grid.Row="16" Grid.Column="0"/>
