--- a/Swimclub.Mobile/Swimclub.Mobile/Views/GradeDetailPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/GradeDetailPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Swimclub.Mobile.Views.GradeDetailPage"
              xmlns:local="clr-namespace:Swimclub.Mobile.ViewModels"
-             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard">
+             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard"
+             >
     <ContentPage.Content>
         <StackLayout>
             <Label FontSize="30">
@@ -13,11 +14,33 @@
                             <Span Text="Grade"/>
                             <Span Text=" "/>
                             <Span Text="{Binding Grade.ID}"/>
+
                         </FormattedString.Spans>
                     </FormattedString>
                 </Label.FormattedText>
             </Label>
-            <Label Text="{Binding StudentsCount}"/>
+            
+            <ListView ItemsSource="{Binding StudentList}" Margin="5">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout>
+                                <Label x:DataType="model:Student"  VerticalOptions="CenterAndExpand">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <FormattedString.Spans>
+                                                <Span Text="{Binding Forename}"></Span>
+                                                <Span Text=" "></Span>
+                                                <Span Text="{Binding Surname}"></Span>
+                                            </FormattedString.Spans>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
