added handling for android being idiot and throwing exceptions when trying to connect and breaking everything added login view model added settings page added funct. to change the ip to connect to saves ip to persistant storage so you dont have to change it every single time added more handling to erros

--- a/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
@@ -99,8 +99,13 @@
         <ShellContent Route="StudentsPage" ContentTemplate="{DataTemplate local:StudentsPage}" />
     </FlyoutItem>
 
-    <FlyoutItem Title="Admin Page" Icon="icon_feed.png" IsVisible="{Binding isAdmin}" x:Name="adminFlyout">
+    <FlyoutItem Title="Settings Page" Icon="icon_feed.png" IsVisible="{Binding isAdmin}" x:Name="adminFlyout">
+        <ShellContent Route="SettingsPage" ContentTemplate="{DataTemplate local:SettingsPage}" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Admin Page" Icon="icon_feed.png" >
         <ShellContent Route="AdminPage" ContentTemplate="{DataTemplate local:AdminPage}" />
+        
     </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
