ADDED TESTING SHEETS or rather the basic implementation I really tried to do mvvm but that is like 2h of my life wasted getting that to work. Also added proper titles everyhwere I am the pogchamp

--- a/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
@@ -95,6 +95,10 @@
     <FlyoutItem Title="Grades" Icon="icon_feed.png">
         <ShellContent Route="AllGrades" ContentTemplate="{DataTemplate local:AllGrades}" />
     </FlyoutItem>
+
+    <FlyoutItem Title="Testing" Icon="icon_feed.png">
+        <ShellContent Route="TestingSheets" ContentTemplate="{DataTemplate local:TestingSheets}" />
+    </FlyoutItem>
     <FlyoutItem Title="Students" Icon="icon_feed.png">
         <ShellContent Route="StudentsPage" ContentTemplate="{DataTemplate local:StudentsPage}" />
     </FlyoutItem>
