--- a/Swimclub.Mobile/Swimclub.Mobile/Views/AdminPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/AdminPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Swimclub.Mobile.Views.AdminPage">
+             x:Class="Swimclub.Mobile.Views.AdminPage"
+             Title="Admin Page">
     <ContentPage.Content>
         <StackLayout>
             <Grid ColumnSpacing="0" RowSpacing="0">
