--- a/Swimclub.Mobile/Swimclub.Mobile/Views/AllGrades.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/AllGrades.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Swimclub.Mobile.Views.AllGrades"
              xmlns:local="clr-namespace:Swimclub.Mobile.ViewModels"
-             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard">
+             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard"
+             Title="Grades">
     <ContentPage.Content>
         <StackLayout>
             <RefreshView x:DataType="local:GradeViewModel" Command="{Binding LoadAll}" IsRefreshing="{Binding isRefreshing}">
