--- a/Swimclub.Mobile/Swimclub.Mobile/Views/GradeDetailPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/GradeDetailPage.xaml
@@ -4,7 +4,8 @@
              x:Class="Swimclub.Mobile.Views.GradeDetailPage"
              xmlns:local="clr-namespace:Swimclub.Mobile.ViewModels"
              xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard"
-             >
+             Title="Grade Detail
+             ">
     <ContentPage.Content>
         <StackLayout>
             <Label FontSize="30">
