--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentDetailPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentDetailPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Swimclub.Mobile.Views.StudentDetailPage"
              xmlns:local="clr-namespace:Swimclub.Mobile.ViewModels"
-             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard">
+             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard" Title="Detailed Student Data">
     <ContentPage.Resources>
         <ResourceDictionary>
             <local:StringArrayToString x:Key="ConvertArray"/>
