--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Swimclub.Mobile.Views.StudentsPage"
              xmlns:local="clr-namespace:Swimclub.Mobile.ViewModels"
-             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard">
+             xmlns:model="clr-namespace:Swimclub.Models;assembly=SwimclubStandard" Title="Students">
     <ContentPage.Content>
         <StackLayout>
             <!--<Grid ColumnSpacing="0" RowSpacing="0">
