--- a/Swimclub.Mobile/Swimclub.Mobile/Views/SwimClassesPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/SwimClassesPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Swimclub.Mobile.Views.SwimClassesPage">
+             x:Class="Swimclub.Mobile.Views.SwimClassesPage" Title="Swim classes">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Add a Class" Clicked="CreateAClass" Command="{Binding AddSwimCLassCommand}" />
